# board-chat

./: pyproject.toml
boards/: admin.py  consumers.py  models.py  routing.py
boards/migrations/: 0001_initial.py  0002_initial.py  0003_alter_preference_user.py
boards/templates/: index.html  room.html
common/: models.py
config/: asgi.py  settings.py  urls.py
users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
